20250311 fixed scss html overflow-x hidden

--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -2570,7 +2570,7 @@
 html {
   line-height: 1;
   box-sizing: border-box;
-  // overflow-x: hidden;
+  overflow-x: hidden;
 }
 ol,
 ul {
